# IFM-Image-Defect-Detection-and-Classification

./: .gitignore  FrontendTest.py  Pipfile  README.md  TwoStepModelTraining.py  TwoStepModelTraining_step_one.py  TwoStepModelTraining_step_two.py  TwoStepModelTraining_steptwo.py  WiskersDetection.py  calculateDefectArea.py  chippingDefectDetection.py  csv_handling.py  defectClassification.py  defectRecognition.py  defectRecognition_toCSV.py  enumDefectTypes.py  filemanagement.py  imagePreProcessing.py  modelTraining.py  modelTraining_fine_tuning.py  pixelToRealWordl.py  pixelToRealWorld.py  pyproject.toml  readFromCSV.py  requirements.txt
additionalCode/: Test_version.py
dataCollection/: FrontendTest.py  WiskersDetection.py  blackDotDetection.py  chippingDefectDetection.py  filemanagement.py  imageCopy.py  imagePreProcessing.py  nonErrorAreaDetection.py  sampleEnhancer.py  savingDefcetsFromCSV.py  savingDefcetsFromTrainedModel.py
dataCollection/defectDetectionClassic/: WiskersDetection.py  nonErrorAreaDetection.py
defectHandling/: calculateDefectArea.py  calculateDefectCount.py  calculate_mean_background.py  chippingDefectHandling.py  saveDefectDataToCSV.py  whiskersDefectHandling.py
defectHandling/saveDefects/: saveDefectPolygons.py  (+1 more)
ifm_image_defect_detection/: TwoStepModelTraining.py  TwoStepModelTraining_step_one.py  __init__.py  defectClassification.py  defectRecognition_toCSV.py  enumDefectTypes.py  modelTraining.py  modelTraining_fine_tuning.py  pixelToRealWorld.py
imagePreProcessing/: imagePreProcessing.py
testdata/: defectCounter.py
(+25 files in other folders)
