[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifm-image-defect-detection"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.1, <3.0.0",
    "opencv-python>=4.10.0.84",
    "tk>=0.1.0, <1.0.0", 
    "matplotlib",
    "pillow",
    "tensorflow",
    "scikit-learn",
    "keras",
    "shapely",
    "scikit-image"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.0"
]

[project.urls]
Repository = "https://github.com/csav1974/IFM-Image-Defect-Detection-and-Classification"

